# animato

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  bug_report.md  feature_request.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  publish-npm.yml  publish.yml  sponsor.yml
benches/: easing_bench.rs  gpu_batch_bench.rs  path_bench.rs  physics_bench.rs  spring_bench.rs  timeline_bench.rs  tween_update_bench.rs
crates/animato/: Cargo.toml
crates/animato-bevy/: Cargo.toml
crates/animato-bevy/src/: lib.rs
crates/animato-color/: Cargo.toml
crates/animato-color/src/: lib.rs  spaces.rs
crates/animato-core/: Cargo.toml
crates/animato-core/src/: easing.rs  lib.rs  math.rs  traits.rs  value.rs
crates/animato-dioxus/src/: css.rs  gesture.rs  hooks.rs  lib.rs  list.rs  motion.rs  native.rs  presence.rs  scroll.rs  transition.rs
crates/animato-driver/: Cargo.toml
crates/animato-driver/src/: clock.rs  driver.rs  lib.rs  recorder.rs  scroll.rs
crates/animato-gpu/: Cargo.toml
crates/animato-gpu/src/: batch.rs  lib.rs
crates/animato-gpu/src/shaders/: tween.wgsl
crates/animato-js/: Cargo.toml  README.md
crates/animato-js/src/: advanced.rs  batch.rs  color.rs  driver.rs  easing.rs  error.rs  keyframe.rs  lib.rs  path.rs  physics.rs  recorder.rs  spring.rs  timeline.rs  tween.rs  types.rs  wasm_dom.rs
crates/animato-js/tests/: wasm.rs
crates/animato-leptos/: Cargo.toml
crates/animato-leptos/src/: css.rs  gesture.rs  hooks.rs  lib.rs  list.rs  presence.rs  scroll.rs  ssr.rs  transition.rs
crates/animato-path/: Cargo.toml
crates/animato-path/src/: bezier.rs  draw.rs  lib.rs  math.rs  morph.rs  motion.rs  poly.rs  svg.rs
crates/animato-physics/: Cargo.toml
crates/animato-physics/src/: decompose.rs  drag.rs  gesture.rs  inertia.rs  lib.rs
crates/animato-spring/: Cargo.toml
crates/animato-spring/src/: config.rs  decompose.rs  lib.rs  spring.rs  spring_n.rs
crates/animato-timeline/: Cargo.toml
crates/animato-timeline/src/: group.rs  lib.rs  sequence.rs  stagger.rs  timeline.rs
crates/animato-tween/: Cargo.toml
crates/animato-tween/src/: builder.rs  keyframe.rs  lib.rs  loop_mode.rs  modifiers.rs  stagger_pattern.rs  tween.rs  waveform.rs
crates/animato-wasm/: Cargo.toml
crates/animato-wasm/src/: draggable.rs  flip.rs  layout_animator.rs  lib.rs  observer.rs  scroll_smoother.rs  shared_element.rs  split_text.rs
crates/animato-yew/: Cargo.toml
crates/animato-yew/src/: agent.rs  css.rs  gesture.rs  list.rs  presence.rs  raf.rs  scroll.rs  transition.rs
crates/animato-yew/tests/: ssr_render.rs
crates/animato/src/: lib.rs
crates/motus/: Cargo.toml
crates/motus-core/: Cargo.toml
crates/motus-core/src/: easing.rs  lib.rs  math.rs  traits.rs
crates/motus-driver/: Cargo.toml
crates/motus-driver/src/: clock.rs  driver.rs  lib.rs
crates/motus-spring/: Cargo.toml
crates/motus-spring/src/: config.rs  decompose.rs  lib.rs  spring.rs  spring_n.rs
crates/motus-tween/: Cargo.toml
crates/motus-tween/src/: builder.rs  lib.rs  loop_mode.rs  modifiers.rs  tween.rs
crates/motus/src/: lib.rs
docs/: README.md  advanced-engine.md  api-full.md  benchmarks.md  bevy.md  color.md  concepts.md  driver.md  examples.md  faq.md  feature-flags.md  getting-started.md  gpu.md  installation.md  javascript.md  leptos.md  migration.md  no-std.md  path.md  performance.md  physics.md  recipes.md  release.md  spring.md  testing.md  timeline.md  troubleshooting.md  tween.md  wasm.md  yew.md
examples/: animation_groups.rs  basic_tween.rs  bevy_transform.rs  color_animation.rs  gpu_particles.rs  keyframe_track.rs  morph_path.rs  motion_path.rs  physics_drag.rs  quaternion_rotation.rs  scroll_linked.rs  spring_demo.rs  spring_fling.rs  stagger_grid.rs  timeline_sequence.rs  tui_progress.rs  tui_spinner.rs  waveform_demo.rs
examples/dioxus_cross_platform/: Cargo.toml
examples/dioxus_cross_platform/src/: main.rs
examples/dioxus_desktop_spring/: Cargo.toml
examples/dioxus_desktop_spring/src/: main.rs
examples/dioxus_tui_progress/: Cargo.toml
examples/dioxus_tui_progress/src/: main.rs
examples/dioxus_web_tween/: Cargo.toml
examples/dioxus_web_tween/src/: main.rs
examples/js_advanced_engine/: package-lock.json  package.json
examples/js_advanced_engine/src/: main.js
examples/js_angular_color/: package-lock.json  package.json
examples/js_react_tween/: package-lock.json  package.json
examples/js_react_tween/src/: App.jsx
examples/js_svelte_spring/: package-lock.json  package.json
examples/js_svelte_spring/src/: App.svelte
examples/js_vanilla_timeline/: package-lock.json  package.json
examples/js_vanilla_timeline/src/: index.html  main.js
examples/js_vue_motion/: package-lock.json  package.json
examples/js_vue_motion/src/: App.vue
examples/leptos_animated_list/: Cargo.toml  index.html
examples/leptos_animated_list/src/: main.rs
examples/leptos_basic_tween/: Cargo.toml  index.html
examples/leptos_basic_tween/src/: main.rs
examples/leptos_drag_gesture/: Cargo.toml  index.html
examples/leptos_drag_gesture/src/: main.rs
examples/leptos_page_transition/: Cargo.toml  index.html
examples/leptos_page_transition/src/: main.rs
examples/leptos_scroll_trigger/: Cargo.toml  index.html
examples/leptos_scroll_trigger/src/: main.rs
examples/wasm_counter/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: svg_path_parser.rs
scripts/: build-js-package.sh  check-js-size.mjs  ci-local.sh  coverage-core.sh  prepare-js-package.mjs  verify-js-example.mjs  wasm-pack-test-js.sh
tests/: advanced_easing.rs  advanced_engine.rs  bevy_integration.rs  color_interpolation.rs  control_features.rs  dioxus_facade.rs  driver_lifecycle.rs  gpu_batch.rs  keyframe_looping.rs  morph_path_integration.rs  motion_path.rs  path_arc_length.rs  physics_input.rs  scroll_driver.rs  spring_settles.rs  svg_path_parser.rs  timeline_sequence.rs  tween_lifecycle.rs  wasm_raf_driver.rs
(+4 files in other folders)
