[workspace]
resolver = "2"
members = [
    "crates/animato-core",
    "crates/animato-tween",
    "crates/animato-timeline",
    "crates/animato-spring",
    "crates/animato-path",
    "crates/animato-physics",
    "crates/animato-color",
    "crates/animato-driver",
    "crates/animato-bevy",
    "crates/animato-wasm",
    "crates/animato",
]

[workspace.package]
version      = "0.7.0"
edition      = "2024"
license      = "MIT OR Apache-2.0"
readme       = "README.md"
repository   = "https://github.com/AarambhDevHub/animato"
authors      = ["Aarambh Dev Hub"]
rust-version = "1.89"

[workspace.dependencies]
# Internal crates — path + version pinned to workspace
animato-core     = { path = "crates/animato-core",     version = "0.7" }
animato-tween    = { path = "crates/animato-tween",    version = "0.7" }
animato-timeline = { path = "crates/animato-timeline", version = "0.7" }
animato-spring   = { path = "crates/animato-spring",   version = "0.7" }
animato-path     = { path = "crates/animato-path",     version = "0.7" }
animato-physics  = { path = "crates/animato-physics",  version = "0.7" }
animato-color    = { path = "crates/animato-color",    version = "0.7" }
animato-driver   = { path = "crates/animato-driver",   version = "0.7" }
animato-bevy     = { path = "crates/animato-bevy",     version = "0.7" }
animato-wasm     = { path = "crates/animato-wasm",     version = "0.7" }

# External crates — shared version pins
serde        = { version = "1",   features = ["derive"] }
tokio        = { version = "1",   features = ["sync"] }
palette      = { version = "0.7", default-features = false, features = ["libm"] }
approx       = { version = "0.5" }
criterion    = { version = "0.5", features = ["html_reports"] }
bevy_app     = { version = "0.18.1", default-features = false }
bevy_ecs     = { version = "0.18.1", default-features = false }
bevy_math    = { version = "0.18.1", default-features = false, features = ["libm"] }
bevy_time    = { version = "0.18.1", default-features = false }
bevy_transform = { version = "0.18.1", default-features = false, features = ["bevy-support", "libm"] }
wasm-bindgen = { version = "0.2" }
js-sys       = { version = "0.3" }
web-sys      = { version = "0.3" }
ratatui      = { version = "0.30.0" }
crossterm    = { version = "0.29.0" }
