[package]
name        = "animato-color"
description = "Perceptual color interpolation wrappers for the Animato animation library."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "color", "palette", "interpolation", "no_std"]
categories  = ["graphics", "no-std", "game-development"]

[features]
default = []
std     = ["animato-core/std", "palette/std"]
serde   = ["dep:serde", "palette/serializing"]

[dependencies]
animato-core = { workspace = true }
palette      = { workspace = true }
serde        = { workspace = true, optional = true }
