[package]
name        = "animato-core"
description = "Core traits and easing system for the Animato animation library."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "easing", "tween", "no_std", "interpolation"]
categories  = ["no-std", "mathematics", "game-development"]

[features]
default = []
std     = []
serde   = ["dep:serde"]

[dependencies]
# libm provides f32 math intrinsics (sin, cos, powf, sqrt, …) for no_std targets.
# In std builds the std implementation is used instead via the math shim.
libm  = "0.2"
serde = { workspace = true, optional = true }
