[package]
name        = "animato-gpu"
description = "GPU and CPU-fallback batch tween evaluation for Animato."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "gpu", "wgpu", "tween", "compute"]
categories  = ["game-development", "graphics"]

[features]
default = []

[dependencies]
animato-core  = { workspace = true, features = ["std"] }
animato-tween = { workspace = true, features = ["std"] }
bytemuck      = { workspace = true }
pollster      = { workspace = true }
wgpu          = { workspace = true }
