[package]
name        = "animato-spring"
description = "Physics-based spring animations for the Animato animation library."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "spring", "physics", "no_std"]
categories  = ["no-std", "game-development"]

[features]
default = []
std     = ["animato-core/std", "alloc"]
alloc   = []   # enables SpringN<T> (requires alloc crate)
serde   = ["dep:serde", "animato-core/serde"]

[dependencies]
animato-core = { workspace = true }
serde      = { workspace = true, optional = true }
