[package]
name        = "animato"
description = "Professional-grade, renderer-agnostic animation library for Rust. Zero mandatory dependencies. no_std-ready."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "tween", "spring", "easing", "game-development"]
categories  = ["game-development", "graphics", "no-std"]

# For no_std targets, depend on animato-core / animato-tween / animato-spring directly.
# The facade crate always enables std features.
[features]
default = ["std", "tween", "spring", "driver"]
std     = ["animato-core/std", "dep:animato-driver"]
tween   = ["dep:animato-tween"]
spring  = ["dep:animato-spring", "animato-spring?/alloc"]
driver  = ["dep:animato-driver"]
serde   = [
    "animato-core/serde",
    "animato-tween?/serde",
    "animato-spring?/serde",
]

[dependencies]
animato-core   = { workspace = true }
animato-tween  = { workspace = true, optional = true }
animato-spring = { workspace = true, optional = true }
animato-driver = { workspace = true, optional = true }

[dev-dependencies]
criterion    = { workspace = true }
animato-core   = { workspace = true }
animato-tween  = { workspace = true }
animato-spring = { workspace = true, features = ["alloc"] }
animato-driver = { workspace = true }

# ── Integration tests ────────────────────────────────────────────────────────
[[test]]
name = "tween_lifecycle"
path = "../../tests/tween_lifecycle.rs"

[[test]]
name = "spring_settles"
path = "../../tests/spring_settles.rs"

[[test]]
name = "driver_lifecycle"
path = "../../tests/driver_lifecycle.rs"

# ── Benchmarks ───────────────────────────────────────────────────────────────
[[bench]]
name    = "easing_bench"
path    = "../../benches/easing_bench.rs"
harness = false

[[bench]]
name    = "tween_update_bench"
path    = "../../benches/tween_update_bench.rs"
harness = false

[[bench]]
name    = "spring_bench"
path    = "../../benches/spring_bench.rs"
harness = false

# ── Examples ─────────────────────────────────────────────────────────────────
[[example]]
name = "basic_tween"
path = "../../examples/basic_tween.rs"

[[example]]
name = "spring_demo"
path = "../../examples/spring_demo.rs"
