[package]
name        = "animato"
description = "Professional-grade, renderer-agnostic animation library for Rust. Zero mandatory dependencies. no_std-ready."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "tween", "spring", "easing", "game-development"]
categories  = ["game-development", "graphics", "no-std"]

# For no_std targets, prefer the focused sub-crates directly.
[features]
default = ["std", "tween", "timeline", "spring", "driver"]
std     = ["animato-core/std", "dep:animato-driver", "animato-tween?/std", "animato-timeline?/std", "animato-spring?/std", "animato-path?/std", "animato-physics?/std"]
tween   = ["dep:animato-tween", "animato-tween/alloc"]
timeline = ["dep:animato-timeline"]
spring  = ["dep:animato-spring", "animato-spring?/alloc"]
path    = ["dep:animato-path", "animato-path/std"]
physics = ["dep:animato-physics", "animato-physics/alloc"]
driver  = ["dep:animato-driver"]
tokio   = ["timeline", "animato-timeline/tokio"]
serde   = [
    "dep:serde",
    "animato-core/serde",
    "animato-tween?/serde",
    "animato-timeline?/serde",
    "animato-spring?/serde",
    "animato-path?/serde",
    "animato-physics?/serde",
]

[dependencies]
animato-core   = { workspace = true }
animato-tween  = { workspace = true, optional = true }
animato-timeline = { workspace = true, optional = true }
animato-spring = { workspace = true, optional = true }
animato-path   = { workspace = true, optional = true }
animato-physics = { workspace = true, optional = true }
animato-driver = { workspace = true, optional = true }
serde          = { workspace = true, optional = true }

[dev-dependencies]
criterion    = { workspace = true }
animato-core   = { workspace = true }
animato-tween  = { workspace = true, features = ["alloc"] }
animato-timeline = { workspace = true }
animato-spring = { workspace = true, features = ["alloc"] }
animato-path   = { workspace = true, features = ["std"] }
animato-physics = { workspace = true, features = ["alloc"] }
animato-driver = { workspace = true }

# ── Integration tests ────────────────────────────────────────────────────────
[[test]]
name = "tween_lifecycle"
path = "../../tests/tween_lifecycle.rs"

[[test]]
name = "spring_settles"
path = "../../tests/spring_settles.rs"

[[test]]
name = "driver_lifecycle"
path = "../../tests/driver_lifecycle.rs"

[[test]]
name = "keyframe_looping"
path = "../../tests/keyframe_looping.rs"
required-features = ["tween"]

[[test]]
name = "timeline_sequence"
path = "../../tests/timeline_sequence.rs"
required-features = ["tween", "timeline"]

[[test]]
name = "control_features"
path = "../../tests/control_features.rs"
required-features = ["tween", "timeline", "spring", "serde", "tokio"]

[[test]]
name = "path_arc_length"
path = "../../tests/path_arc_length.rs"
required-features = ["path"]

[[test]]
name = "motion_path"
path = "../../tests/motion_path.rs"
required-features = ["path"]

[[test]]
name = "svg_path_parser"
path = "../../tests/svg_path_parser.rs"
required-features = ["path"]

[[test]]
name = "physics_input"
path = "../../tests/physics_input.rs"
required-features = ["physics"]

# ── Benchmarks ───────────────────────────────────────────────────────────────
[[bench]]
name    = "easing_bench"
path    = "../../benches/easing_bench.rs"
harness = false

[[bench]]
name    = "tween_update_bench"
path    = "../../benches/tween_update_bench.rs"
harness = false

[[bench]]
name    = "spring_bench"
path    = "../../benches/spring_bench.rs"
harness = false

[[bench]]
name    = "path_bench"
path    = "../../benches/path_bench.rs"
harness = false

[[bench]]
name    = "physics_bench"
path    = "../../benches/physics_bench.rs"
harness = false

# ── Examples ─────────────────────────────────────────────────────────────────
[[example]]
name = "basic_tween"
path = "../../examples/basic_tween.rs"
required-features = ["tween", "driver"]

[[example]]
name = "spring_demo"
path = "../../examples/spring_demo.rs"
required-features = ["spring", "driver"]

[[example]]
name = "keyframe_track"
path = "../../examples/keyframe_track.rs"
required-features = ["tween"]

[[example]]
name = "timeline_sequence"
path = "../../examples/timeline_sequence.rs"
required-features = ["tween", "timeline"]

[[example]]
name = "motion_path"
path = "../../examples/motion_path.rs"
required-features = ["path"]

[[example]]
name = "physics_drag"
path = "../../examples/physics_drag.rs"
required-features = ["physics"]
