[package]
name        = "motus-driver"
description = "AnimationDriver and Clock abstractions for the Motus animation library."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "driver", "clock", "game-loop"]
categories  = ["game-development"]

[features]
default = ["std"]
std     = ["motus-core/std"]

[dependencies]
motus-core = { workspace = true }

[dev-dependencies]
motus-tween  = { workspace = true }
motus-core   = { workspace = true }
