[package]
name        = "motus-spring"
description = "Physics-based spring animations for the Motus animation library."
readme.workspace  = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
rust-version.workspace = true
keywords    = ["animation", "spring", "physics", "no_std"]
categories  = ["no-std", "game-development"]

[features]
default = []
std     = ["motus-core/std", "alloc"]
alloc   = []   # enables SpringN<T> (requires alloc crate)
serde   = ["dep:serde", "motus-core/serde"]

[dependencies]
motus-core = { workspace = true }
serde      = { workspace = true, optional = true }
